{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "9b40266e-e408-4c2f-9601-122fa8752e47",
            "actions": [
                {
                    "name": "SwipeHorizontal",
                    "type": "PassThrough",
                    "id": "467b9a7e-818a-41d9-9e52-6411cff436cd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwipeVertical",
                    "type": "PassThrough",
                    "id": "c2a72eef-ad6e-43c9-bf68-bed01cac1438",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "Value",
                    "id": "15c85834-cdec-4c67-b87a-5504ec1b2b50",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchPosition",
                    "type": "Value",
                    "id": "5eb04434-55df-4945-8bfb-c8d861bbd2b1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouch",
                    "type": "Button",
                    "id": "0960bc2e-3e5e-4df6-8dbc-684cc17ec4d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "75cbbf40-e0ed-4e67-89dc-fd00102b0c16",
                    "path": "<Touchscreen>/primaryTouch/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0308e7e5-7009-41ae-ad68-b3b469bc48ac",
                    "path": "<Touchscreen>/primaryTouch/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeVertical",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1059a368-9ef5-4c26-8ae5-c6eb6286ecea",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eaf884a0-4e12-44d4-bdb7-1b074e5f3742",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f81bf295-5b5b-4f1c-bb53-0acf3fd92c67",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}